--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,15 @@ body {
 }
 
 #result {
-  text-align: center;
-  vertical-align: middle;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 1rem;
   margin: 5rem;
   border: 2px solid white;
   border-radius: 2px;
+  width: 10rem;
+  height: 3rem;
 }
 
 #score {
